--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <nav class="navigation">
               <ul class="menu-list">
                 <li class="menu-list-item">
-                  <a href="#" class="menu-link active">HOME <i class="bi bi-chevron-compact-down"></i></a>
+                  <a href="index.html" class="menu-link active">HOME <i class="bi bi-chevron-compact-down"></i></a>
                   <div class="menu-dropdown-wrapper">
                     <ul class="menu-dropdown-content">
                       <li><a href="">Home Clean</a></li>
@@ -50,7 +50,7 @@
                   </div>
                 </li>
                 <li class="menu-list-item megamenu-wrapper">
-                  <a href="#" class="menu-link">SHOP <i class="bi bi-chevron-compact-down"></i></a>
+                  <a href="shop.html" class="menu-link">SHOP <i class="bi bi-chevron-compact-down"></i></a>
                   <div class="menu-dropdown-wrapper">
                     <div class="menu-dropdown-megamenu">
                       <div class="megamenu-links">
@@ -135,12 +135,12 @@
                   </div>
                 </li>
                 <li class="menu-list-item">
-                  <a href="#" class="menu-link">
+                  <a href="blog.html" class="menu-link">
                     BLOG
                   </a>
                 </li>
                 <li class="menu-list-item">
-                  <a href="#" class="menu-link">CONTACTS</a>
+                  <a href="contact.html" class="menu-link">CONTACT US</a>
                 </li>
               </ul>
             </nav>
