--- a/index.html
+++ b/index.html
@@ -617,245 +617,251 @@
         <h2>New Arrivals</h2>
         <p>Summer Collection New Modern Design</p>
       </div>
-      <div class="product-wrapper">
-        <ul class="product-list">
-          <li class="product-item">
-            <div class="product-image">
+    <div class="product-wrapper product-carousel2" >
+     <div class="glide__track" data-glide-el="track">
+      <ul class="product-list glide__slides">
+        <li class="product-item glide__slide">
+          <div class="product-image">
+            <a href="#">
+              <img src="img/products/product1/1.png" class="img1" />
+              <img src="img/products/product1/2.png" class="img2" />
+            </a>
+          </div>
+          <div class="product-info">
+            <a href="#" class="product-title">Anaologue Resin Strap</a>
+            <ul class="product-star">
+              <li>
+                <i class="bi bi-star-fill"></i>
+              </li>
+              <li>
+                <i class="bi bi-star-fill"></i>
+              </li>
+              <li>
+                <i class="bi bi-star-fill"></i>
+              </li>
+              <li>
+                <i class="bi bi-star-fill"></i>
+              </li>
+              <li>
+                <i class="bi bi-star-half"></i>
+              </li>
+            </ul>
+            <div class="product-prices">
+              <strong class="new-price">$108.00</strong>
+              <span class="old-price">$165.00</span>
+            </div>
+            <span class="product-discount">-%17</span>
+            <div class="product-links">
+              <button>
+                <i class="bi bi-basket-fill"></i>
+              </button>
+              <button>
+                <i class="bi bi-heart-fill"></i>
+              </button>
               <a href="#">
-                <img src="img/products/product1/1.png" class="img1" />
-                <img src="img/products/product1/2.png" class="img2" />
+                <i class="bi bi-eye-fill"></i>
+              </a>
+              <a href="#">
+                <i class="bi bi-share-fill"></i>
               </a>
             </div>
-            <div class="product-info">
-              <a href="#" class="product-title">Anaologue Resin Strap</a>
-              <ul class="product-star">
-                <li>
-                  <i class="bi bi-star-fill"></i>
-                </li>
-                <li>
-                  <i class="bi bi-star-fill"></i>
-                </li>
-                <li>
-                  <i class="bi bi-star-fill"></i>
-                </li>
-                <li>
-                  <i class="bi bi-star-fill"></i>
-                </li>
-                <li>
-                  <i class="bi bi-star-half"></i>
-                </li>
-              </ul>
-              <div class="product-prices">
-                <strong class="new-price">$108.00</strong>
-                <span class="old-price">$165.00</span>
-              </div>
-              <span class="product-discount">-%17</span>
-              <div class="product-links">
-                <button>
-                  <i class="bi bi-basket-fill"></i>
-                </button>
-                <button>
-                  <i class="bi bi-heart-fill"></i>
-                </button>
-                <a href="#">
-                  <i class="bi bi-eye-fill"></i>
-                </a>
-                <a href="#">
-                  <i class="bi bi-share-fill"></i>
-                </a>
-              </div>
+          </div>
+        </li>
+        <li class="product-item glide__slide">
+          <div class="product-image">
+            <a href="#">
+              <img src="img/products/product2/1.png" class="img1" />
+              <img src="img/products/product2/2.png" class="img2" />
+            </a>
+          </div>
+          <div class="product-info">
+            <a href="#" class="product-title">Anaologue Resin Strap</a>
+            <ul class="product-star">
+              <li>
+                <i class="bi bi-star-fill"></i>
+              </li>
+              <li>
+                <i class="bi bi-star-fill"></i>
+              </li>
+              <li>
+                <i class="bi bi-star-fill"></i>
+              </li>
+              <li>
+                <i class="bi bi-star-fill"></i>
+              </li>
+              <li>
+                <i class="bi bi-star-half"></i>
+              </li>
+            </ul>
+            <div class="product-prices">
+              <strong class="new-price">$108.00</strong>
+              <span class="old-price">$165.00</span>
             </div>
-          </li>
-          <li class="product-item">
-            <div class="product-image">
+            <span class="product-discount">-%17</span>
+            <div class="product-links">
+              <button>
+                <i class="bi bi-basket-fill"></i>
+              </button>
+              <button>
+                <i class="bi bi-heart-fill"></i>
+              </button>
               <a href="#">
-                <img src="img/products/product2/1.png" class="img1" />
-                <img src="img/products/product2/2.png" class="img2" />
+                <i class="bi bi-eye-fill"></i>
+              </a>
+              <a href="#">
+                <i class="bi bi-share-fill"></i>
               </a>
             </div>
-            <div class="product-info">
-              <a href="#" class="product-title">Anaologue Resin Strap</a>
-              <ul class="product-star">
-                <li>
-                  <i class="bi bi-star-fill"></i>
-                </li>
-                <li>
-                  <i class="bi bi-star-fill"></i>
-                </li>
-                <li>
-                  <i class="bi bi-star-fill"></i>
-                </li>
-                <li>
-                  <i class="bi bi-star-fill"></i>
-                </li>
-                <li>
-                  <i class="bi bi-star-half"></i>
-                </li>
-              </ul>
-              <div class="product-prices">
-                <strong class="new-price">$108.00</strong>
-                <span class="old-price">$165.00</span>
-              </div>
-              <span class="product-discount">-%17</span>
-              <div class="product-links">
-                <button>
-                  <i class="bi bi-basket-fill"></i>
-                </button>
-                <button>
-                  <i class="bi bi-heart-fill"></i>
-                </button>
-                <a href="#">
-                  <i class="bi bi-eye-fill"></i>
-                </a>
-                <a href="#">
-                  <i class="bi bi-share-fill"></i>
-                </a>
-              </div>
+          </div>
+        </li>
+        <li class="product-item glide__slide">
+          <div class="product-image">
+            <a href="#">
+              <img src="img/products/product3/1.png" class="img1" />
+              <img src="img/products/product3/2.png" class="img2" />
+            </a>
+          </div>
+          <div class="product-info">
+            <a href="#" class="product-title">Anaologue Resin Strap</a>
+            <ul class="product-star">
+              <li>
+                <i class="bi bi-star-fill"></i>
+              </li>
+              <li>
+                <i class="bi bi-star-fill"></i>
+              </li>
+              <li>
+                <i class="bi bi-star-fill"></i>
+              </li>
+              <li>
+                <i class="bi bi-star-fill"></i>
+              </li>
+              <li>
+                <i class="bi bi-star-half"></i>
+              </li>
+            </ul>
+            <div class="product-prices">
+              <strong class="new-price">$108.00</strong>
+              <span class="old-price">$165.00</span>
             </div>
-          </li>
-          <li class="product-item">
-            <div class="product-image">
+            <span class="product-discount">-%17</span>
+            <div class="product-links">
+              <button>
+                <i class="bi bi-basket-fill"></i>
+              </button>
+              <button>
+                <i class="bi bi-heart-fill"></i>
+              </button>
               <a href="#">
-                <img src="img/products/product3/1.png" class="img1" />
-                <img src="img/products/product3/2.png" class="img2" />
+                <i class="bi bi-eye-fill"></i>
+              </a>
+              <a href="#">
+                <i class="bi bi-share-fill"></i>
               </a>
             </div>
-            <div class="product-info">
-              <a href="#" class="product-title">Anaologue Resin Strap</a>
-              <ul class="product-star">
-                <li>
-                  <i class="bi bi-star-fill"></i>
-                </li>
-                <li>
-                  <i class="bi bi-star-fill"></i>
-                </li>
-                <li>
-                  <i class="bi bi-star-fill"></i>
-                </li>
-                <li>
-                  <i class="bi bi-star-fill"></i>
-                </li>
-                <li>
-                  <i class="bi bi-star-half"></i>
-                </li>
-              </ul>
-              <div class="product-prices">
-                <strong class="new-price">$108.00</strong>
-                <span class="old-price">$165.00</span>
-              </div>
-              <span class="product-discount">-%17</span>
-              <div class="product-links">
-                <button>
-                  <i class="bi bi-basket-fill"></i>
-                </button>
-                <button>
-                  <i class="bi bi-heart-fill"></i>
-                </button>
-                <a href="#">
-                  <i class="bi bi-eye-fill"></i>
-                </a>
-                <a href="#">
-                  <i class="bi bi-share-fill"></i>
-                </a>
-              </div>
+          </div>
+        </li>
+        <li class="product-item glide__slide">
+          <div class="product-image">
+            <a href="#">
+              <img src="img/products/product4/1.png" class="img1" />
+              <img src="img/products/product4/2.png" class="img2" />
+            </a>
+          </div>
+          <div class="product-info">
+            <a href="#" class="product-title">Anaologue Resin Strap</a>
+            <ul class="product-star">
+              <li>
+                <i class="bi bi-star-fill"></i>
+              </li>
+              <li>
+                <i class="bi bi-star-fill"></i>
+              </li>
+              <li>
+                <i class="bi bi-star-fill"></i>
+              </li>
+              <li>
+                <i class="bi bi-star-fill"></i>
+              </li>
+              <li>
+                <i class="bi bi-star-half"></i>
+              </li>
+            </ul>
+            <div class="product-prices">
+              <strong class="new-price">$108.00</strong>
+              <span class="old-price">$165.00</span>
             </div>
-          </li>
-          <li class="product-item">
-            <div class="product-image">
+            <span class="product-discount">-%17</span>
+            <div class="product-links">
+              <button>
+                <i class="bi bi-basket-fill"></i>
+              </button>
+              <button>
+                <i class="bi bi-heart-fill"></i>
+              </button>
               <a href="#">
-                <img src="img/products/product4/1.png" class="img1" />
-                <img src="img/products/product4/2.png" class="img2" />
+                <i class="bi bi-eye-fill"></i>
+              </a>
+              <a href="#">
+                <i class="bi bi-share-fill"></i>
               </a>
             </div>
-            <div class="product-info">
-              <a href="#" class="product-title">Anaologue Resin Strap</a>
-              <ul class="product-star">
-                <li>
-                  <i class="bi bi-star-fill"></i>
-                </li>
-                <li>
-                  <i class="bi bi-star-fill"></i>
-                </li>
-                <li>
-                  <i class="bi bi-star-fill"></i>
-                </li>
-                <li>
-                  <i class="bi bi-star-fill"></i>
-                </li>
-                <li>
-                  <i class="bi bi-star-half"></i>
-                </li>
-              </ul>
-              <div class="product-prices">
-                <strong class="new-price">$108.00</strong>
-                <span class="old-price">$165.00</span>
-              </div>
-              <span class="product-discount">-%17</span>
-              <div class="product-links">
-                <button>
-                  <i class="bi bi-basket-fill"></i>
-                </button>
-                <button>
-                  <i class="bi bi-heart-fill"></i>
-                </button>
-                <a href="#">
-                  <i class="bi bi-eye-fill"></i>
-                </a>
-                <a href="#">
-                  <i class="bi bi-share-fill"></i>
-                </a>
-              </div>
+          </div>
+        </li>
+        <li class="product-item glide__slide">
+          <div class="product-image">
+            <a href="#">
+              <img src="img/products/product5/1.png" class="img1" />
+              <img src="img/products/product5/2.png" class="img2" />
+            </a>
+          </div>
+          <div class="product-info">
+            <a href="#" class="product-title">Anaologue Resin Strap</a>
+            <ul class="product-star">
+              <li>
+                <i class="bi bi-star-fill"></i>
+              </li>
+              <li>
+                <i class="bi bi-star-fill"></i>
+              </li>
+              <li>
+                <i class="bi bi-star-fill"></i>
+              </li>
+              <li>
+                <i class="bi bi-star-fill"></i>
+              </li>
+              <li>
+                <i class="bi bi-star-half"></i>
+              </li>
+            </ul>
+            <div class="product-prices">
+              <strong class="new-price">$108.00</strong>
+              <span class="old-price">$165.00</span>
             </div>
-          </li>
-          <li class="product-item">
-            <div class="product-image">
+            <span class="product-discount">-%17</span>
+            <div class="product-links">
+              <button>
+                <i class="bi bi-basket-fill"></i>
+              </button>
+              <button>
+                <i class="bi bi-heart-fill"></i>
+              </button>
               <a href="#">
-                <img src="img/products/product5/1.png" class="img1" />
-                <img src="img/products/product5/2.png" class="img2" />
+                <i class="bi bi-eye-fill"></i>
+              </a>
+              <a href="#">
+                <i class="bi bi-share-fill"></i>
               </a>
             </div>
-            <div class="product-info">
-              <a href="#" class="product-title">Anaologue Resin Strap</a>
-              <ul class="product-star">
-                <li>
-                  <i class="bi bi-star-fill"></i>
-                </li>
-                <li>
-                  <i class="bi bi-star-fill"></i>
-                </li>
-                <li>
-                  <i class="bi bi-star-fill"></i>
-                </li>
-                <li>
-                  <i class="bi bi-star-fill"></i>
-                </li>
-                <li>
-                  <i class="bi bi-star-half"></i>
-                </li>
-              </ul>
-              <div class="product-prices">
-                <strong class="new-price">$108.00</strong>
-                <span class="old-price">$165.00</span>
-              </div>
-              <span class="product-discount">-%17</span>
-              <div class="product-links">
-                <button>
-                  <i class="bi bi-basket-fill"></i>
-                </button>
-                <button>
-                  <i class="bi bi-heart-fill"></i>
-                </button>
-                <a href="#">
-                  <i class="bi bi-eye-fill"></i>
-                </a>
-                <a href="#">
-                  <i class="bi bi-share-fill"></i>
-                </a>
-              </div>
-            </div>
-          </li>
-        </ul>
-      </div>
+          </div>
+        </li>
+      </ul>
+     </div>
+     <div class="glide__arrows" data-glide-el="controls">
+      <button class="glide__arrow glide__arrow--left" data-glide-dir="<"><i class="bi bi-chevron-left"></i> </button>
+      <button class="glide__arrow glide__arrow--right" data-glide-dir=">"><i class="bi bi-chevron-right"></i></button>
+    </div>
+    </div>
     </div>
   </section>
   <!-- new arrivals end -->
