--- a/cart.html
+++ b/cart.html
@@ -27,10 +27,10 @@
       <div class="container">
         <div class="header-wrapper">
           <div class="header-mobile">
-            <i class="bi bi-list"></i>
+            <i class="bi bi-list" id="btn-menu"></i>
           </div>
           <div class="header-left"><a href="#" class="logo">LOGO</a></div>
-          <div class="header-center">
+          <div class="header-center" id="sidebar">
             <nav class="navigation">
               <ul class="menu-list">
                 <li class="menu-list-item">
@@ -81,9 +81,9 @@
                             </li>
                           </ul>
                         </div>
-                      </div>
-                      <div class="megamenu-products">
-                        <h3 class="megamenu-products-title">Filter Layout</h3>
+                        </div>
+                        <div class="megamenu-products">
+                          <h3 class="megamenu-products-title">Filter Layout</h3>
                         <ul class="megamenu-menu-list">
                           <li>
                             <a href="#">Sidebar</a>
@@ -135,28 +135,30 @@
                   </div>
                 </li>
                 <li class="menu-list-item">
-                  <a href="blog.html" class="menu-link"> BLOG </a>
+                  <a href="blog.html" class="menu-link">
+                    BLOG
+                  </a>
                 </li>
                 <li class="menu-list-item">
                   <a href="contact.html" class="menu-link">CONTACT US</a>
                 </li>
               </ul>
             </nav>
-            <i class="bi-x-circle"></i>
+            <i class="bi-x-circle" id="close-sidebar"></i>
           </div>
           <div class="header-right">
             <div class="header-right-links">
               <a href="#" class="header-account">
                 <i class="bi bi-person"> </i>
               </a>
-              <button class="toggle-button">
+              <button class="search-button">
                 <i class="bi bi-search"></i>
               </button>
               <a href="#">
                 <i class="bi bi-heart"> </i>
               </a>
               <div class="header-cart">
-                <a href="#" class="header-cart-link">
+                <a href="cart.html" class="header-cart-link">
                   <i class="bi bi-bag"> </i>
                   <span class="header-cart-count">0</span>
                 </a>
@@ -204,7 +206,7 @@
           </a>
         </div>
       </div>
-      <i class="bi bi-x-circle"></i>
+      <i class="bi bi-x-circle" id="close-search"></i>
     </div>
   </div>
   <!-- modal search ends -->
@@ -528,6 +530,7 @@
     </div>
   </footer>
   <!-- footer ends -->
+  <script src="js/main.js" type="module"></script>
 </body>
 
 </html>
