--- a/cart.html
+++ b/cart.html
@@ -233,26 +233,6 @@
                 <th class="product-subtotal">Subtotal</th>
               </thead>
               <tbody class="cart-wrapper">
-                <tr class="cart-item">
-                  <td class="cart-image">
-                    <img src="img/products/product1/1.png" alt="">
-                    <i class="bi bi-x delete-cart"></i>
-                  </td>
-                  <td>Analogue Resin Strap</td>
-                  <td>$108.00</td>
-                  <td class="product-quantity">1</td>
-                  <td class="product-subtotal">$108.00</td>
-                </tr>
-                <tr class="cart-item">
-                  <td class="cart-image">
-                    <img src="img/products/product2/1.png" alt="">
-                    <i class="bi bi-x delete-cart"></i>
-                  </td>
-                  <td>Analogue Resin Strap</td>
-                  <td>$108.00</td>
-                  <td class="product-quantity">1</td>
-                  <td class="product-subtotal">$108.00</td>
-                </tr>
               </tbody>
             </table>
             <div class="actions-wrapper">
@@ -531,6 +511,7 @@
   </footer>
   <!-- footer ends -->
   <script src="js/main.js" type="module"></script>
+  <script src="js/cart.js" type="module"></script>
 </body>
 
 </html>
