--- a/cart.html
+++ b/cart.html
@@ -264,7 +264,7 @@
                     <li>
                       <label>
                         Fast Cargo: $15.00
-                        <input type="checkbox">
+                        <input type="checkbox" id="fast-cargo">
                       </label>
                     </li>
                     <li>
@@ -276,7 +276,7 @@
               <tr>
                 <th>Total:</th>
                 <td>
-                  <strong>$316.00</strong>
+                  <strong id="cart-total">$316.00</strong>
                 </td>
               </tr>
             </tbody>
