--- a/single-product.html
+++ b/single-product.html
@@ -6,6 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>E-Commerce</title>
+    <!-- GlideJs Css CDN -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Glide.js/3.6.0/css/glide.core.min.css">
   <!-- Bootstrap Icons CDN -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css" />
   <link rel="stylesheet" href="css/main.css" />
@@ -27,10 +29,10 @@
       <div class="container">
         <div class="header-wrapper">
           <div class="header-mobile">
-            <i class="bi bi-list"></i>
+            <i class="bi bi-list" id="btn-menu"></i>
           </div>
           <div class="header-left"><a href="#" class="logo">LOGO</a></div>
-          <div class="header-center">
+          <div class="header-center" id="sidebar">
             <nav class="navigation">
               <ul class="menu-list">
                 <li class="menu-list-item">
@@ -81,9 +83,9 @@
                             </li>
                           </ul>
                         </div>
-                      </div>
-                      <div class="megamenu-products">
-                        <h3 class="megamenu-products-title">Filter Layout</h3>
+                        </div>
+                        <div class="megamenu-products">
+                          <h3 class="megamenu-products-title">Filter Layout</h3>
                         <ul class="megamenu-menu-list">
                           <li>
                             <a href="#">Sidebar</a>
@@ -135,28 +137,30 @@
                   </div>
                 </li>
                 <li class="menu-list-item">
-                  <a href="blog.html" class="menu-link"> BLOG </a>
+                  <a href="blog.html" class="menu-link">
+                    BLOG
+                  </a>
                 </li>
                 <li class="menu-list-item">
                   <a href="contact.html" class="menu-link">CONTACT US</a>
                 </li>
               </ul>
             </nav>
-            <i class="bi-x-circle"></i>
+            <i class="bi-x-circle" id="close-sidebar"></i>
           </div>
           <div class="header-right">
             <div class="header-right-links">
               <a href="#" class="header-account">
                 <i class="bi bi-person"> </i>
               </a>
-              <button class="toggle-button">
+              <button class="search-button">
                 <i class="bi bi-search"></i>
               </button>
               <a href="#">
                 <i class="bi bi-heart"> </i>
               </a>
               <div class="header-cart">
-                <a href="#" class="header-cart-link">
+                <a href="cart.html" class="header-cart-link">
                   <i class="bi bi-bag"> </i>
                   <span class="header-cart-count">0</span>
                 </a>
@@ -168,7 +172,6 @@
     </div>
   </header>
   <!-- header ends -->
-
   <!-- modal search starts -->
   <div class="modal-search">
     <div class="modal-wrapper">
@@ -205,14 +208,10 @@
           </a>
         </div>
       </div>
-      <i class="bi bi-x-circle"></i>
+      <i class="bi bi-x-circle" id="close-search"></i>
     </div>
   </div>
   <!-- modal search ends -->
-
-  <!-- single product starts -->
-
-  <!-- single product ends -->
   <!-- single product starts -->
   <section class="single-product">
     <div class="container">
@@ -238,22 +237,28 @@
         <!-- site main starts -->
         <div class="single-content">
           <main class="site-main">
-            <div class="product-gallery">
+            <div class="product-gallery"> 
               <div class="single-image-wrapper">
-                <img src="img/products/product2/1.png" />
+                <img id="single-image"/>
               </div>
-              <div class="product-thumb">
-                <ol class="gallery-thumbs">
-                  <li>
-                    <img src="img/products/product2/1.png" class="img-fluid active" />
-                  </li>
-                  <li>
-                    <img src="img/products/product2/2.png" class="img-fluid" />
-                  </li>
-                  <li>
-                    <img src="img/products/product2/3.png" class="img-fluid" />
-                  </li>
-                </ol>
+              <div class="product-thumb glide">
+                <div class="glide__track" data-glide-el="track">
+                  <ol class="gallery-thumbs glide__slides">
+                    <li class="glide__slide">
+                      <img src="img/products/product2/1.png" class="img-fluid active" />
+                    </li> 
+                    <li class="glide__slide">
+                      <img src="img/products/product2/1.png" class="img-fluid active" />
+                    </li>
+                    <li class="glide__slide">
+                      <img src="img/products/product2/1.png" class="img-fluid active" />
+                    </li>
+                  </ol>
+                </div>
+                <div class="glide__arrows" data-glide-el="controls">
+                  <button class="glide__arrow glide__arrow--left" data-glide-dir="<"><i class="bi bi-chevron-left"></i></button>
+                  <button class="glide__arrow glide__arrow--right" data-glide-dir=">"><i class="bi bi-chevron-right"></i></button>
+                </div>
               </div>
             </div>
             <div class="product-info">
@@ -279,8 +284,8 @@
                 <span>2 reviews</span>
               </div>
               <div class="product-price">
-                <s>$268</s>
-                <strong>$165</strong>
+                <s class="old-price">$268</s>
+                <strong class="new-price">$165</strong>
               </div>
               <p class="product-description">
                 Neque porro quisquam est qui dolorem ipsum quia dolor sit
@@ -814,6 +819,12 @@
     </div>
   </footer>
   <!-- footer ends -->
+
+  <!-- javascript -->
+  <script src="js/main.js" type="module"></script>
+  <script src="js/single-product.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@glidejs/glide"></script>
+  <script src="js/glide.js" type="module"></script>
 </body>
 
 </html>
