Single-product page implementation

--- a/single-product.html
+++ b/single-product.html
@@ -241,18 +241,9 @@
               <div class="single-image-wrapper">
                 <img id="single-image"/>
               </div>
-              <div class="product-thumb glide">
+              <div class="product-thumb glide" id="product-list3" >
                 <div class="glide__track" data-glide-el="track">
                   <ol class="gallery-thumbs glide__slides">
-                    <li class="glide__slide">
-                      <img src="img/products/product2/1.png" class="img-fluid active" />
-                    </li> 
-                    <li class="glide__slide">
-                      <img src="img/products/product2/1.png" class="img-fluid active" />
-                    </li>
-                    <li class="glide__slide">
-                      <img src="img/products/product2/1.png" class="img-fluid active" />
-                    </li>
                   </ol>
                 </div>
                 <div class="glide__arrows" data-glide-el="controls">
@@ -822,7 +813,7 @@
 
   <!-- javascript -->
   <script src="js/main.js" type="module"></script>
-  <script src="js/single-product.js"></script>
+  <script src="js/single-product.js" type="module"></script>
   <script src="https://cdn.jsdelivr.net/npm/@glidejs/glide"></script>
   <script src="js/glide.js" type="module"></script>
 </body>
