--- a/contact.html
+++ b/contact.html
@@ -29,10 +29,12 @@
         <div class="container">
           <div class="header-wrapper">
             <div class="header-mobile">
-              <i class="bi bi-list"></i>
+              <i class="bi bi-list" id="btn-menu"></i>
             </div>
-            <div class="header-left"><a href="#" class="logo">LOGO</a></div>
-            <div class="header-center">
+            <div class="header-left">
+              <a href="index.html" class="logo">LOGO</a>
+            </div>
+            <div class="header-center" id="sidebar">
               <nav class="navigation">
                 <ul class="menu-list">
                   <li class="menu-list-item">
@@ -54,7 +56,7 @@
                     </div>
                   </li>
                   <li class="menu-list-item megamenu-wrapper">
-                    <a href="#" class="menu-link"
+                    <a href="shop.html" class="menu-link"
                       >SHOP <i class="bi bi-chevron-compact-down"></i
                     ></a>
                     <div class="menu-dropdown-wrapper">
@@ -143,28 +145,30 @@
                     </div>
                   </li>
                   <li class="menu-list-item">
-                    <a href="#" class="menu-link"> BLOG </a>
+                    <a href="blog.html" class="menu-link"> BLOG </a>
                   </li>
                   <li class="menu-list-item">
-                    <a href="#" class="menu-link active">CONTACT US</a>
+                    <a href="contact.html" class="menu-link active"
+                      >CONTACT US</a
+                    >
                   </li>
                 </ul>
               </nav>
-              <i class="bi-x-circle"></i>
+              <i class="bi-x-circle" id="close-sidebar"></i>
             </div>
             <div class="header-right">
               <div class="header-right-links">
-                <a href="#" class="header-account">
+                <a href="account.html" class="header-account">
                   <i class="bi bi-person"> </i>
                 </a>
-                <button class="toggle-button">
+                <button class="search-button">
                   <i class="bi bi-search"></i>
                 </button>
                 <a href="#">
                   <i class="bi bi-heart"> </i>
                 </a>
                 <div class="header-cart">
-                  <a href="#" class="header-cart-link">
+                  <a href="cart.html" class="header-cart-link">
                     <i class="bi bi-bag"> </i>
                     <span class="header-cart-count">0</span>
                   </a>
@@ -176,7 +180,6 @@
       </div>
     </header>
     <!-- header ends -->
-
     <!-- modal search starts -->
     <div class="modal-search">
       <div class="modal-wrapper">
@@ -221,10 +224,41 @@
             </a>
           </div>
         </div>
-        <i class="bi bi-x-circle"></i>
+        <i class="bi bi-x-circle" id="close-search"></i>
       </div>
     </div>
     <!-- modal search ends -->
+    <!-- modal dialog starts -->
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <button class="modal-close">
+          <i class="i bi-x"></i>
+        </button>
+        <div class="modal-image">
+          <img src="/img/modal-dialog.jpg " alt="" />
+        </div>
+        <div class="popup-wrapper">
+          <div class="popup-content">
+            <div class="popup-title">
+              <h3>NEWSLETTER</h3>
+            </div>
+            <p class="popup-text">
+              Sign up to our newsletter and get exclusive deals you won't find
+              anywhere else!
+            </p>
+            <form class="popup-form">
+              <input type="text" placeholder="Enter email address here" />
+              <button class="btn btn-primary">SUBSCRIBE</button>
+              <label>
+                <input type="checkbox" />
+                <span>Don't show this popup again</span>
+              </label>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- modal dialog ends -->
     <!-- contact starts -->
     <section class="contact">
       <div class="contact-top">
@@ -536,5 +570,6 @@
       </div>
     </footer>
     <!-- footer ends -->
+    <script src="js/main.js" type="module"></script>
   </body>
 </html>
