--- a/single-product.html
+++ b/single-product.html
@@ -14,204 +14,232 @@
 </head>
 
 <body>
-  <!-- header starts -->
-  <header>
-    <div class="global-notification">
-      <div class="container">
-        <p>
-          SUMMER SALE FOR ALL SWIM SUITS AND FREE EXPRESS INTERNATIONAL
-          DELIVERY - OFF 50%!
-          <a href="shop.html">SHOP NOW</a>
-        </p>
-      </div>
-    </div>
-    <div class="header-row">
-      <div class="container">
-        <div class="header-wrapper">
-          <div class="header-mobile">
-            <i class="bi bi-list" id="btn-menu"></i>
-          </div>
-          <div class="header-left"><a href="#" class="logo">LOGO</a></div>
-          <div class="header-center" id="sidebar">
-            <nav class="navigation">
-              <ul class="menu-list">
-                <li class="menu-list-item">
-                  <a href="index.html" class="menu-link active">HOME <i class="bi bi-chevron-compact-down"></i></a>
-                  <div class="menu-dropdown-wrapper">
-                    <ul class="menu-dropdown-content">
-                      <li><a href="">Home Clean</a></li>
-                      <li><a href="">Home Collection</a></li>
-                      <li><a href="">Home Minimal</a></li>
-                      <li><a href="">Home Modern</a></li>
-                      <li><a href="">Home Products</a></li>
-                      <li><a href="">Home Strong</a></li>
-                      <li><a href="">Home Style</a></li>
-                      <li><a href="">Home Unique</a></li>
-                      <li><a href="">Home RTL</a></li>
-                    </ul>
-                  </div>
-                </li>
-                <li class="menu-list-item megamenu-wrapper">
-                  <a href="shop.html" class="menu-link">SHOP <i class="bi bi-chevron-compact-down"></i></a>
-                  <div class="menu-dropdown-wrapper">
-                    <div class="menu-dropdown-megamenu">
-                      <div class="megamenu-links">
-                        <div class="megamenu-products">
-                          <h3 class="megamenu-products-title">Shop Style</h3>
-                          <ul class="megamenu-menu-list">
-                            <a href="#">Shop Standard</a>
-                            <li>
-                              <a href="#">Shop Flil</a>
-                            </li>
-                            <li>
-                              <a href="#">Shop Only Categories</a>
-                            </li>
-                            <li>
-                              <a href="#">Shop Image Categories</a>
-                            </li>
-                            <li>
-                              <a href="#">Shop Subcategories</a>
-                            </li>
-                            <li>
-                              <a href="#">Hover Style 1</a>
-                            </li>
-                            <li>
-                              <a href="#">Hover Style 2</a>
-                            </li>
-                            <li>
-                              <a href="#">Hover Style 3</a>
-                            </li>
-                          </ul>
-                        </div>
-                        </div>
-                        <div class="megamenu-products">
-                          <h3 class="megamenu-products-title">Filter Layout</h3>
-                        <ul class="megamenu-menu-list">
-                          <li>
-                            <a href="#">Sidebar</a>
-                          </li>
-                          <li>
-                            <a href="#">Filter Side Out</a>
-                          </li>
-                          <li>
-                            <a href="#">Filter Dropdown</a>
-                          </li>
-                          <li>
-                            <a href="#">Filter Drawer</a>
-                          </li>
-                        </ul>
-                      </div>
-                      <div class="megamenu-products">
-                        <h3 class="megamenu-products-title">Shop Loader</h3>
-                        <ul class="megamenu-menu-list">
-                          <a href="#">Shop Pagination</a>
-                          <li>
-                            <a href="#">Shop Infinity</a>
-                          </li>
-                          <li>
-                            <a href="#">Shop Load More</a>
-                          </li>
-                          <li>
-                            <a href="#">Cart Modal</a>
-                          </li>
-                          <li>
-                            <a href="#">Cart Drawer</a>
-                          </li>
-                          <li>
-                            <a href="#">Cart Page</a>
-                          </li>
-                        </ul>
-                      </div>
-                      <div class="megamenu-single">
-                        <a href="#"> </a>
-                        <img src="img/mega-menu.jpg" alt="" />
-                        <h3 class="megamenu-single-title">
-                          JOIN THE LAYERING GANG
-                        </h3>
-                        <p class="megamenu-single-subtitle">
-                          Benefit from the best offers
-                        </p>
-                        <a href="#" class="megamenu-single-button btn btn-sm">Shop Now</a>
-                      </div>
-                    </div>
-                  </div>
-                </li>
-                <li class="menu-list-item">
-                  <a href="blog.html" class="menu-link">
-                    BLOG
-                  </a>
-                </li>
-                <li class="menu-list-item">
-                  <a href="contact.html" class="menu-link">CONTACT US</a>
-                </li>
-              </ul>
-            </nav>
-            <i class="bi-x-circle" id="close-sidebar"></i>
-          </div>
-          <div class="header-right">
-            <div class="header-right-links">
-              <a href="#" class="header-account">
-                <i class="bi bi-person"> </i>
-              </a>
-              <button class="search-button">
-                <i class="bi bi-search"></i>
-              </button>
-              <a href="#">
-                <i class="bi bi-heart"> </i>
-              </a>
-              <div class="header-cart">
-                <a href="cart.html" class="header-cart-link">
-                  <i class="bi bi-bag"> </i>
-                  <span class="header-cart-count">0</span>
-                </a>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </header>
-  <!-- header ends -->
-  <!-- modal search starts -->
-  <div class="modal-search">
-    <div class="modal-wrapper">
-      <h3 class="modal-title">Search for products</h3>
-      <p class="modal-text">
-        Start typing to see the products you are looking for
+ <!-- header starts -->
+ <header>
+  <div class="global-notification">
+    <div class="container">
+      <p>
+        SUMMER SALE FOR ALL SWIM SUITS AND FREE EXPRESS INTERNATIONAL
+        DELIVERY - OFF 50%!
+        <a href="shop.html">SHOP NOW</a>
       </p>
-      <form class="search-form">
-        <input type="text" placeholder="Search products" />
-        <button>
-          <i class="bi bi-search"></i>
-        </button>
-      </form>
-      <div class="search-results">
-        <div class="search-heading">
-          <h3 class>RESULTS FROM PRODUCT</h3>
-        </div>
-        <div class="results">
-          <a href="#" class="result-item">
-            <img src="img/products/product2/1.png" class="search-thumb" alt="" />
-            <div class="search-info">
-              <h4>Anaologue Resin Strap</h4>
-              <span class="search-sku">SKU: PD0001</span>
-              <span class="search-price">$108</span>
-            </div>
-          </a>
-          <a href="#" class="result-item">
-            <img src="img/products/product1/1.png" class="search-thumb" alt="" />
-            <div class="search-info">
-              <h4>Anaologue Resin Strap</h4>
-              <span class="search-sku">SKU: PD0001</span>
-              <span class="search-price">$108</span>
-            </div>
-          </a>
-        </div>
-      </div>
-      <i class="bi bi-x-circle" id="close-search"></i>
     </div>
   </div>
-  <!-- modal search ends -->
+  <div class="header-row">
+    <div class="container">
+      <div class="header-wrapper">
+        <div class="header-mobile">
+          <i class="bi bi-list" id="btn-menu"></i>
+        </div>
+        <div class="header-left"><a href="index.html" class="logo">LOGO</a></div>
+        <div class="header-center" id="sidebar">
+          <nav class="navigation">
+            <ul class="menu-list">
+              <li class="menu-list-item">
+                <a href="index.html" class="menu-link active">HOME <i class="bi bi-chevron-compact-down"></i></a>
+                <div class="menu-dropdown-wrapper">
+                  <ul class="menu-dropdown-content">
+                    <li><a href="">Home Clean</a></li>
+                    <li><a href="">Home Collection</a></li>
+                    <li><a href="">Home Minimal</a></li>
+                    <li><a href="">Home Modern</a></li>
+                    <li><a href="">Home Products</a></li>
+                    <li><a href="">Home Strong</a></li>
+                    <li><a href="">Home Style</a></li>
+                    <li><a href="">Home Unique</a></li>
+                    <li><a href="">Home RTL</a></li>
+                  </ul>
+                </div>
+              </li>
+              <li class="menu-list-item megamenu-wrapper">
+                <a href="shop.html" class="menu-link">SHOP <i class="bi bi-chevron-compact-down"></i></a>
+                <div class="menu-dropdown-wrapper">
+                  <div class="menu-dropdown-megamenu">
+                    <div class="megamenu-links">
+                      <div class="megamenu-products">
+                        <h3 class="megamenu-products-title">Shop Style</h3>
+                        <ul class="megamenu-menu-list">
+                          <a href="#">Shop Standard</a>
+                          <li>
+                            <a href="#">Shop Flil</a>
+                          </li>
+                          <li>
+                            <a href="#">Shop Only Categories</a>
+                          </li>
+                          <li>
+                            <a href="#">Shop Image Categories</a>
+                          </li>
+                          <li>
+                            <a href="#">Shop Subcategories</a>
+                          </li>
+                          <li>
+                            <a href="#">Hover Style 1</a>
+                          </li>
+                          <li>
+                            <a href="#">Hover Style 2</a>
+                          </li>
+                          <li>
+                            <a href="#">Hover Style 3</a>
+                          </li>
+                        </ul>
+                      </div>
+                      </div>
+                      <div class="megamenu-products">
+                        <h3 class="megamenu-products-title">Filter Layout</h3>
+                      <ul class="megamenu-menu-list">
+                        <li>
+                          <a href="#">Sidebar</a>
+                        </li>
+                        <li>
+                          <a href="#">Filter Side Out</a>
+                        </li>
+                        <li>
+                          <a href="#">Filter Dropdown</a>
+                        </li>
+                        <li>
+                          <a href="#">Filter Drawer</a>
+                        </li>
+                      </ul>
+                    </div>
+                    <div class="megamenu-products">
+                      <h3 class="megamenu-products-title">Shop Loader</h3>
+                      <ul class="megamenu-menu-list">
+                        <a href="#">Shop Pagination</a>
+                        <li>
+                          <a href="#">Shop Infinity</a>
+                        </li>
+                        <li>
+                          <a href="#">Shop Load More</a>
+                        </li>
+                        <li>
+                          <a href="#">Cart Modal</a>
+                        </li>
+                        <li>
+                          <a href="#">Cart Drawer</a>
+                        </li>
+                        <li>
+                          <a href="#">Cart Page</a>
+                        </li>
+                      </ul>
+                    </div>
+                    <div class="megamenu-single">
+                      <a href="#"> </a>
+                      <img src="img/mega-menu.jpg" alt="" />
+                      <h3 class="megamenu-single-title">
+                        JOIN THE LAYERING GANG
+                      </h3>
+                      <p class="megamenu-single-subtitle">
+                        Benefit from the best offers
+                      </p>
+                      <a href="#" class="megamenu-single-button btn btn-sm">Shop Now</a>
+                    </div>
+                  </div>
+                </div>
+              </li>
+              <li class="menu-list-item">
+                <a href="blog.html" class="menu-link">
+                  BLOG
+                </a>
+              </li>
+              <li class="menu-list-item">
+                <a href="contact.html" class="menu-link">CONTACT US</a>
+              </li>
+            </ul>
+          </nav>
+          <i class="bi-x-circle" id="close-sidebar"></i>
+        </div>
+        <div class="header-right">
+          <div class="header-right-links">
+            <a href="account.html" class="header-account">
+              <i class="bi bi-person"> </i>
+            </a>
+            <button class="search-button">
+              <i class="bi bi-search"></i>
+            </button>
+            <a href="#">
+              <i class="bi bi-heart"> </i>
+            </a>
+            <div class="header-cart">
+              <a href="cart.html" class="header-cart-link">
+                <i class="bi bi-bag"> </i>
+                <span class="header-cart-count">0</span>
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</header>
+<!-- header ends -->
+<!-- modal search starts -->
+<div class="modal-search">
+  <div class="modal-wrapper">
+    <h3 class="modal-title">Search for products</h3>
+    <p class="modal-text">
+      Start typing to see the products you are looking for
+    </p>
+    <form class="search-form">
+      <input type="text" placeholder="Search products" />
+      <button>
+        <i class="bi bi-search"></i>
+      </button>
+    </form>
+    <div class="search-results">
+      <div class="search-heading">
+        <h3 class>RESULTS FROM PRODUCT</h3>
+      </div>
+      <div class="results">
+        <a href="#" class="result-item">
+          <img src="img/products/product2/1.png" class="search-thumb" alt="" />
+          <div class="search-info">
+            <h4>Anaologue Resin Strap</h4>
+            <span class="search-sku">SKU: PD0001</span>
+            <span class="search-price">$108</span>
+          </div>
+        </a>
+        <a href="#" class="result-item">
+          <img src="img/products/product1/1.png" class="search-thumb" alt="" />
+          <div class="search-info">
+            <h4>Anaologue Resin Strap</h4>
+            <span class="search-sku">SKU: PD0001</span>
+            <span class="search-price">$108</span>
+          </div>
+        </a>
+      </div>
+    </div>
+    <i class="bi bi-x-circle" id="close-search"></i>
+  </div>
+</div>
+<!-- modal search ends -->
+<!-- modal dialog starts -->
+<div class="modal-dialog">
+<div class="modal-content">
+  <button class="modal-close">
+    <i class="i bi-x"></i>
+  </button>
+  <div class="modal-image">
+    <img src="/img/modal-dialog.jpg " alt="">
+  </div>
+  <div class="popup-wrapper">
+    <div class="popup-content">
+      <div class="popup-title">
+        <h3>NEWSLETTER</h3>
+      </div>
+      <p class="popup-text">Sign up to our newsletter and get exclusive deals you won't find anywhere else!</p>
+      <form class="popup-form">
+        <input type="text" placeholder="Enter email address here">
+        <button class="btn btn-primary">SUBSCRIBE</button>
+        <label>
+          <input type="checkbox">
+          <span>Don't show this popup again</span>
+        </label>
+      </form>
+    </div>
+  </div>
+</div>
+</div>
+<!-- modal dialog ends -->
   <!-- single product starts -->
   <section class="single-product">
     <div class="container">
@@ -290,7 +318,7 @@
                       <span>Colors</span>
                     </div>
                     <div class="colors-wrapper">
-                      <div class="color-wrapper active">
+                      <div class="color-wrapper">
                         <label class="blue-color">
                           <input type="radio" name="product-color" />
                         </label>
@@ -375,7 +403,7 @@
             </li>
           </ul>
           <div class="tab-panel">
-            <div class="tab-panel-description content" id="desc">
+            <div class="tab-panel-description content active" id="desc">
               <p>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
                 do eiusmod tempor incididunt ut labore et dolore magna aliqua.
@@ -429,7 +457,7 @@
                 </tbody>
               </table>
             </div>
-            <div class="tab-panel-reviews content active" id="reviews">
+            <div class="tab-panel-reviews content" id="reviews">
               <h3>
                 2 reviews for Basic Colored Sweatpants With Elastic Hems
               </h3>
@@ -650,7 +678,7 @@
         <div class="footer-widgets">
           <div class="brand-info">
             <div class="footer-logo">
-              <a href="#" class="logo">LOGO</a>
+              <a href="index.html" class="logo">LOGO</a>
             </div>
             <div class="footer-description">
               <p>
